# poetry-demo

./: pyproject.toml
poetry_demo.egg-info/: PKG-INFO  requires.txt
