[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Belkada Adam <adam.belkada@edf-re.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^1.4"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
demo = "pytest:main"